<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="edu.nextstep.camp.calculator.MainViewModel" />

        <variable
            name="operation"
            type="com.example.domain.Operation" />

        <variable
            name="plus"
            type="com.example.domain.Operation.Add" />

        <variable
            name="minus"
            type="com.example.domain.Operation.Subtract" />

        <variable
            name="multiply"
            type="com.example.domain.Operation.Multiply" />

        <variable
            name="divide"
            type="com.example.domain.Operation.Divide" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/expressionText"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            android:hint="0"
            android:textAlignment="viewEnd"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@id/divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@{viewModel.expression}"
            tools:ignore="HardcodedText" />

        <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginBottom="16dp"
            android:background="#ddd"
            app:layout_constraintBottom_toTopOf="@id/buttonDelete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonDelete"
            style="@style/Widget.Calculator.Button.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:icon="@drawable/ic_baseline_keyboard_backspace_24"
            app:layout_constraintBottom_toTopOf="@id/input"
            app:layout_constraintEnd_toEndOf="@id/input"
            android:onClick="@{() -> viewModel.onClickDeleteBtn()}"/>

        <GridLayout
            android:id="@+id/input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="4"
            android:rowCount="4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/button7"
                style="@style/Widget.Calculator.Button.Uncolored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculator_7"
                android:onClick="@{()-> viewModel.onClickNumberBtn(7)}"/>

            <Button
                android:id="@+id/button8"
                style="@style/Widget.Calculator.Button.Uncolored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculator_8"
                android:onClick="@{()-> viewModel.onClickNumberBtn(8)}"/>

            <Button
                android:id="@+id/button9"
                style="@style/Widget.Calculator.Button.Uncolored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculator_9"
                android:onClick="@{()-> viewModel.onClickNumberBtn(9)}" />

            <Button
                android:id="@+id/buttonDivide"
                style="@style/Widget.Calculator.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculator_divide"
                android:onClick="@{() -> viewModel.onClickOperationBtn(divide)}"/>

            <Button
                android:id="@+id/button4"
                style="@style/Widget.Calculator.Button.Uncolored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculator_4"
                android:onClick="@{()-> viewModel.onClickNumberBtn(4)}"/>

            <Button
                android:id="@+id/button5"
                style="@style/Widget.Calculator.Button.Uncolored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculator_5"
                android:onClick="@{()-> viewModel.onClickNumberBtn(5)}"/>

            <Button
                android:id="@+id/button6"
                style="@style/Widget.Calculator.Button.Uncolored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculator_6"
                android:onClick="@{()-> viewModel.onClickNumberBtn(6)}" />

            <Button
                android:id="@+id/buttonMultiply"
                style="@style/Widget.Calculator.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculator_multiply"
                android:onClick="@{() -> viewModel.onClickOperationBtn(multiply)}"/>

            <Button
                android:id="@+id/button1"
                style="@style/Widget.Calculator.Button.Uncolored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculator_1"
                android:onClick="@{()-> viewModel.onClickNumberBtn(1)}" />

            <Button
                android:id="@+id/button2"
                style="@style/Widget.Calculator.Button.Uncolored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculator_2"
                android:onClick="@{()-> viewModel.onClickNumberBtn(2)}"/>

            <Button
                android:id="@+id/button3"
                style="@style/Widget.Calculator.Button.Uncolored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculator_3"
                android:onClick="@{()-> viewModel.onClickNumberBtn(3)}" />

            <Button
                android:id="@+id/buttonMinus"
                style="@style/Widget.Calculator.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculator_minus"
                android:onClick="@{() -> viewModel.onClickOperationBtn(minus)}"/>

            <Button
                android:id="@+id/button0"
                style="@style/Widget.Calculator.Button.Uncolored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculator_0"
                android:onClick="@{()-> viewModel.onClickNumberBtn(0)}" />

            <Space
                android:id="@+id/space1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/buttonEquals"
                style="@style/Widget.Calculator.Button.BackgroundColored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculator_equals"
                android:onClick="@{() -> viewModel.onClickEqualBtn()}"/>

            <Button
                android:id="@+id/buttonPlus"
                style="@style/Widget.Calculator.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculator_plus"
                android:onClick="@{() -> viewModel.onClickOperationBtn(plus)}"/>
        </GridLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
